{
  "version": 4,
  "terraform_version": "1.2.2",
  "serial": 331,
  "lineage": "4f6f92a5-5f02-d274-92ee-b9e1adb2adb5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "appc_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b8390ee86e3d4256",
            "association_id": "eipassoc-0a508f932e50bcbf3",
            "domain": "vpc",
            "id": "eipalloc-0b8390ee86e3d4256",
            "instance": "i-05da7955562793559",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-04f4c2015b01fb437",
            "private_dns": "ip-192-168-10-117.ap-southeast-1.compute.internal",
            "private_ip": "192.168.10.117",
            "public_dns": "ec2-52-221-130-84.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "52.221.130.84",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "App Control EIP"
            },
            "tags_all": {
              "Name": "App Control EIP"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.appc_server",
            "aws_key_pair.public_key",
            "aws_security_group.appc_sg",
            "aws_subnet.appc_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "appc_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-064eb0bee0c5402c5",
            "arn": "arn:aws:ec2:ap-southeast-1:750897108520:instance/i-05da7955562793559",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05da7955562793559",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "Dom-AWS-Keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04f4c2015b01fb437",
            "private_dns": "ip-192-168-10-117.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.10.117",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ac7bb4cf0f400b67",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0a5f3c8e38f9e170b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05e30428e1ee809f9",
            "tags": {
              "Environment": "CB-Demo",
              "Name": "App Control"
            },
            "tags_all": {
              "Environment": "CB-Demo",
              "Name": "App Control"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a5f3c8e38f9e170b"
            ]
          },
          "dependencies": [
            "aws_key_pair.public_key",
            "aws_security_group.appc_sg",
            "aws_subnet.appc_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "appc_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:750897108520:internet-gateway/igw-0d87b24f8511dc2a6",
            "id": "igw-0d87b24f8511dc2a6",
            "owner_id": "750897108520",
            "tags": {
              "Environment": "CB_Demo",
              "Name": "App Control VPC IGW"
            },
            "tags_all": {
              "Environment": "CB_Demo",
              "Name": "App Control VPC IGW"
            },
            "vpc_id": "vpc-0472da20276b6ebfa"
          },
          "dependencies": [
            "aws_vpc.appc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "appc_rt_assocation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-020e33c6084c617f2",
            "original_route_table_id": "rtb-097e377e0a144113b",
            "route_table_id": "rtb-0c7b588272df49b81",
            "vpc_id": "vpc-0472da20276b6ebfa"
          },
          "dependencies": [
            "aws_internet_gateway.appc_igw",
            "aws_route_table.appc_rt",
            "aws_vpc.appc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "appc_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:750897108520:route-table/rtb-0c7b588272df49b81",
            "id": "rtb-0c7b588272df49b81",
            "owner_id": "750897108520",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d87b24f8511dc2a6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "CB_Demo",
              "Name": "App Control VPC RT"
            },
            "tags_all": {
              "Environment": "CB_Demo",
              "Name": "App Control VPC RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0472da20276b6ebfa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.appc_igw",
            "aws_vpc.appc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "demo_rt_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0acd58cb1825dfdcd",
            "route_table_id": "rtb-0c7b588272df49b81",
            "subnet_id": "subnet-05e30428e1ee809f9"
          },
          "dependencies": [
            "aws_internet_gateway.appc_igw",
            "aws_route_table.appc_rt",
            "aws_subnet.appc_subnet",
            "aws_vpc.appc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "appc_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:750897108520:security-group/sg-0a5f3c8e38f9e170b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a5f3c8e38f9e170b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Agent Comms",
                "from_port": 41002,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 41002
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS access",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "RDP to Win Server",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "App Control SG",
            "name_prefix": "",
            "owner_id": "750897108520",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "App Control SG"
            },
            "tags_all": {
              "Name": "App Control SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0472da20276b6ebfa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.appc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "appc_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:750897108520:subnet/subnet-05e30428e1ee809f9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "192.168.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05e30428e1ee809f9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "750897108520",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "CB_Demo",
              "Name": "App Control Subnet"
            },
            "tags_all": {
              "Environment": "CB_Demo",
              "Name": "App Control Subnet"
            },
            "vpc_id": "vpc-0472da20276b6ebfa"
          },
          "dependencies": [
            "aws_vpc.appc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "appc_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:750897108520:vpc/vpc-0472da20276b6ebfa",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.10.0/24",
            "default_network_acl_id": "acl-079e7a90b3656f2df",
            "default_route_table_id": "rtb-0c7b588272df49b81",
            "default_security_group_id": "sg-05d7226b17947135e",
            "dhcp_options_id": "dopt-b6c35fd2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0472da20276b6ebfa",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c7b588272df49b81",
            "owner_id": "750897108520",
            "tags": {
              "Environment": "CB_Demo",
              "Name": "App Control VPC"
            },
            "tags_all": {
              "Environment": "CB_Demo",
              "Name": "App Control VPC"
            }
          }
        }
      ]
    }
  ]
}